wacc/test/golden/syntaxErr.sequence.endSeq
# extra sequential composition 

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip end;


In test/wacc_examples/invalid/syntaxErr/sequence/endSeq.wacc (line 11, column 15):
  unexpected ";"
  expected end of end or end of input
  >
  >begin skip end;
                 ^
  >